--- a/home.html
+++ b/home.html
@@ -682,7 +682,29 @@ body.dark #taskList li.done {
 }
 
 
+
+
+
+
+
+
+
     
+
+.btn {
+  display: inline-block;
+  background: linear-gradient(135deg, #36d1dc, #5b86e5);
+  color: white;
+  padding: 12px 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: transform 0.2s;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+}
     
   </style>
 </head>
@@ -958,6 +980,7 @@ body.dark #taskList li.done {
 
 <!-- https://youtube.com/@createdforyou1?si=52R6LwVPhOn6o2Qw -->
 
+<a href="https://ah9742824-oss.github.io/my-tasks/"class="btn">مهام</a>
 
 <script>
 
@@ -1625,6 +1648,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
