--- a/home.html
+++ b/home.html
@@ -980,7 +980,10 @@ body.dark #taskList li.done {
 
 <!-- https://youtube.com/@createdforyou1?si=52R6LwVPhOn6o2Qw -->
 
-<a href="https://ah9742824-oss.github.io/my-tasks/"class="btn">مهام</a>
+
+  <a href="https://www.google.com" target="_blank" rel="noopener noreferrer" class="btn"">
+    🔗 مهامي
+  </a>
 
 <script>
 
@@ -1648,6 +1651,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
