--- a/home.html
+++ b/home.html
@@ -788,6 +788,7 @@ body.dark #taskList li.done {
       <li><a href="https://youtu.be/ZekH_yaue88">درس 6 (M)</a></li>
       <li><a href="https://youtu.be/sHEyM-mvEWY">درس 7 (M)</a></li>
       <li><a href="https://youtu.be/bqJCYnYcq8M?si=dnDzAmTqfYT6GvbM">درس 8 (M)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=7qSQTsfsrlQ&list=PLm877Wx3hfJ1-2B7_tT1NqPIL-IQCKMt2&index=4&pp=iAQB">درس 9 (M)</a></li>
 
     </ul>
   </details>
@@ -893,27 +894,43 @@ body.dark #taskList li.done {
      
     </ul>
   </details>
-
-  <!-- مجالات -->
-  <details class="subject dynamics">
-    <summary>⚙️ مجالات</summary>
-    <ul>
-      <li><a href="https://youtu.be/oNc_GEzV7hc">درس 1 (م)</a></li>
-      <li><a href="https://youtu.be/Dyl-s_7Zrbc">درس 2 (م)</a></li>
-      <li><a href="https://youtu.be/UtO9s_Pqn90">درس 3 (م)</a></li>
-      <li><a href="https://youtu.be/Hf8nEKq9u8o">درس 4 (م)</a></li>
-      <li><a href="https://youtu.be/nDBocsTXzag">درس 5 (م)</a></li>
-      <li><a href="https://youtu.be/0Qn8GEJRVlM">درس 6 (م)</a></li> 
-      <li><a href="https://youtu.be/4NuAEOBfr5w">درس 7 (م)</a></li>
-      <li><a href="https://youtu.be/A4x2irXs3TI">درس 8 (م)</a></li>
-      <li><a href="https://youtu.be/lui2UDeAVUw">درس 9 (م)</a></li>
-      <li><a href="https://youtu.be/s68MYVd1KfM">درس 10 (م)</a></li>
-      <li><a href="https://youtu.be/KlW3TdvEFlg">درس 11 (م)</a></li>
-
-
+ <details class="subject dynamics">
+    <summary>⚙️Feild</summary>
+    <details>
+      <summary> Bahaa & Tamer </summary>
+      <div class="LESSONS">
+    <ul> 
+      <li><a href="https://youtu.be/oNc_GEzV7hc">درس 1 (f.b)</a></li>
+      <li><a href="https://youtu.be/Dyl-s_7Zrbc">درس 2 (f.b)</a></li>
+      <li><a href="https://youtu.be/UtO9s_Pqn90">درس 3 (f.b)</a></li>
+      <li><a href="https://youtu.be/Hf8nEKq9u8o">درس 4 (f.b)</a></li>
+      <li><a href="https://youtu.be/nDBocsTXzag">درس 5 (f.b)</a></li>
+      <li><a href="https://youtu.be/0Qn8GEJRVlM">درس 6 (f.b)</a></li> 
+      <li><a href="https://youtu.be/4NuAEOBfr5w">درس 7 (f.b)</a></li>
+      <li><a href="https://youtu.be/A4x2irXs3TI">درس 8 (f.b)</a></li>
+      <li><a href="https://youtu.be/lui2UDeAVUw">درس 9 (f.b)</a></li>
+      <li><a href="https://youtu.be/s68MYVd1KfM">درس 10 (f.b)</a></li>
+      <li><a href="https://youtu.be/KlW3TdvEFlg">درس 11 (f.b)</a></li>
     </ul>
-  </details>
 
+    </details>
+    <details>
+       <summary>M.maher</summary>
+      <div class="LESSONS">
+            <ul>
+      <li><a href="https://www.youtube.com/watch?v=GCvnl01BbP4&list=PLm877Wx3hfJ26h1I9bJdNnH3nPqrvDb-N&index=2&pp=iAQB">درس 1 (f.m) </a></li>
+      <li><a href="https://www.youtube.com/watch?v=KIZP9Z_0t0Q&list=PLm877Wx3hfJ26h1I9bJdNnH3nPqrvDb-N&index=3&t=2s&pp=iAQB">درس 2 (f.m)</a></li>
+      <li><a href="https://youtu.be/dq2HFBlmd0c?si=nWltG2b_kKc7F-ZI">درس 3 (f.m)</a></li>
+      <li><a href="https://youtu.be/zYmFkDp8ns8?si=kaNafImGDcYhb9_Q">درس 4 (f.m)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=wRMP3sJF0rE&list=PLm877Wx3hfJ26h1I9bJdNnH3nPqrvDb-N&index=6&t=225s&pp=iAQB">درس 5 (f.m)</a></li>
+      <li><a href="https://youtu.be/kX5Xzc3H9j4?si=WcVEihwpMO15Pjxx">درس 6 (f.m)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=KJMgQ5dEgEc&list=PLm877Wx3hfJ26h1I9bJdNnH3nPqrvDb-N&index=8&pp=iAQB">درس 7 (f.m)</a></li>
+    </ul>
+    </details>
+  </details>
+  
+  
+  
   <!-- تقارير -->
   <details class="subject electronics">
     <summary>💡 تقارير </summary>
@@ -1651,6 +1668,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
