Update links and text for educational resources

--- a/termes .html
+++ b/termes .html
@@ -63,8 +63,8 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://ah9742824-oss.github.io/my-project/home.html" class="btn">📚 مكتبتي التعليمية</a>
-    <a href="https://ah9742824-oss.github.io/cine-box" class="btn">🎬 CineBox</a>
+    <a href="https://ah9742824-oss.github.io/my-project/home.html" class="btn">  ترم اول  📚 مكتبتي التعليمية </a>
+    <a href="https://ah9742824-oss.github.io/cine-box" class="btn">  ترم ثاني  📚 مكتبتي التعليمية</a>
   </div>
 </body>
 </html>
