Update title and styles in termes.html

--- a/termes .html
+++ b/termes .html
@@ -2,13 +2,13 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>أزرار مبهجة راقية</title>
+  <title>خلفية بمؤثرات أنيقة</title>
   <style>
     body {
       font-family: 'Cairo', sans-serif;
-      background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
+      background: linear-gradient(135deg, #2c3e50, #4ca1af, #f0b27a, #d35400);
       background-size: 400% 400%;
-      animation: gradientBG 12s ease infinite;
+      animation: gradientBG 15s ease infinite;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,6 +16,7 @@
       margin: 0;
     }
 
+    /* حركة الخلفية */
     @keyframes gradientBG {
       0% {background-position: 0% 50%;}
       50% {background-position: 100% 50%;}
@@ -29,42 +30,42 @@
     .btn {
       display: inline-block;
       margin: 20px;
-      padding: 18px 50px;
-      font-size: 20px;
+      padding: 16px 45px;
+      font-size: 18px;
       font-weight: bold;
       color: #fff;
       text-decoration: none;
       border-radius: 40px;
-      background: linear-gradient(135deg, #00c6ff, #0072ff);
-      box-shadow: 0 0 20px rgba(0, 198, 255, 0.6),
-                  0 0 40px rgba(0, 114, 255, 0.4);
-      transition: all 0.4s ease;
+      background: linear-gradient(135deg, #5dade2, #3498db);
+      box-shadow: 0 0 12px rgba(52, 152, 219, 0.3),
+                  0 0 24px rgba(52, 152, 219, 0.2);
+      transition: all 0.3s ease;
       cursor: pointer;
     }
 
     .btn:nth-child(2) {
-      background: linear-gradient(135deg, #ff9966, #ff5e62);
-      box-shadow: 0 0 20px rgba(255, 153, 102, 0.6),
-                  0 0 40px rgba(255, 94, 98, 0.4);
+      background: linear-gradient(135deg, #e59866, #d35400);
+      box-shadow: 0 0 12px rgba(229, 152, 102, 0.3),
+                  0 0 24px rgba(211, 84, 0, 0.2);
     }
 
     .btn:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.9),
-                  0 0 60px rgba(255, 255, 255, 0.7);
+      transform: scale(1.05);
+      box-shadow: 0 0 18px rgba(255, 255, 255, 0.5),
+                  0 0 36px rgba(255, 255, 255, 0.3);
     }
 
     .btn:active {
       transform: scale(0.95);
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.5),
-                  0 0 30px rgba(255, 255, 255, 0.3);
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.3),
+                  0 0 20px rgba(255, 255, 255, 0.2);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <a href="https://ah9742824-oss.github.io/my-project/home.html" class="btn">  ترم اول  📚 مكتبتي التعليمية </a>
-    <a href="https://ah9742824-oss.github.io/cine-box" class="btn">  ترم ثاني  📚 مكتبتي التعليمية</a>
+    <a href="home.html" class="btn">ترم اول</a>
+    <a href="home2.html" class="btn">ترم ثاني </a>
   </div>
 </body>
 </html>
