--- a/home2.html
+++ b/home2.html
@@ -911,14 +911,14 @@ body.dark #taskList li.done {
  <details class="subject linguistics">
     <summary>📊 انسانيات </summary>
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=m9GfGHZ4ErQ&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=1&pp=iAQB">درس 1 (ق)</a></li>
-      <li><a href="https://www.youtube.com/watch?v=8aOdqBcDtYQ&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=2&pp=iAQB">درس 1 (ق)</a></li>
-      <li><a href="https://www.youtube.com/watch?v=ff9a6Df-njk&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=3&pp=iAQB">درس 1 (ق)</a></li>
-      <li><a href="https://www.youtube.com/watch?v=96a-tb_WzT4&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=4&pp=iAQB">درس 4 (اح)</a></li>
-      <li><a href="https://www.youtube.com/watch?v=Ot0gg1kyfzU&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=5&pp=iAQB">درس 5 (اح)</a></li>
-      <li><a href="https://www.youtube.com/watch?v=nvKTg43N1A0&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=6&pp=iAQB0gcJCXwKAYcqIYzv">درس 6 (اح)</a></li>
-      <li><a href="https://www.youtube.com/watch?v=AZ6QFVkz9cY&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=7&pp=iAQB">درس 7 (اح)</a></li>
-      <li><a href="https://www.youtube.com/watch?v=kqUA3Mdzln0&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=8&pp=iAQB">درس 8 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=m9GfGHZ4ErQ&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=1&pp=iAQB">درس 1 (ان)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=8aOdqBcDtYQ&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=2&pp=iAQB">درس 1 (ان)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=ff9a6Df-njk&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=3&pp=iAQB">درس 1 (ان)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=96a-tb_WzT4&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=4&pp=iAQB">درس 4 (ان)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=Ot0gg1kyfzU&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=5&pp=iAQB">درس 5 (ان)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=nvKTg43N1A0&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=6&pp=iAQB0gcJCXwKAYcqIYzv">درس 6 (ان)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=AZ6QFVkz9cY&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=7&pp=iAQB">درس 7 (ان)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=kqUA3Mdzln0&list=PLyO98vlXWz8vmOghceQ09SvvhMGMgKz_P&index=8&pp=iAQB">درس 8 (ان)</a></li>
 
     </ul>
   </details>
